// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should not output styles when unstyled is set 1`] = `
<div>
  <a
    class="emotion-0"
    href="https://octopusthink.com/"
  >
    hello
  </a>
</div>
`;

exports[`Link should output Link styles 1`] = `
.emotion-0 {
  color: #cd2f83;
  box-shadow: 0 2px #f5bbda;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.emotion-0:hover {
  box-shadow: 0 2px #a0dee3;
  color: #0097a2;
}

.emotion-0:focus {
  box-shadow: 0 0 0 0.2rem #f5bbda;
  outline: 0;
  color: #cd2f83;
}

<div>
  <a
    class="emotion-0"
    href="https://octopusthink.com/"
  >
    hello
  </a>
</div>
`;
